# monetdb-tra-preprocessor

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
src/: mclient_tra.cc  mclient_tra_preprocessor.cc  monetdb-tra-preprocessor.cc
test/: 01.sql  02.sql  03.sql  db.sql
